fixed to allow boxes to be dragged within the overflow

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 .box {
     background-size: contain;
     background-image: url(images/icon.png);
-    position: absolute
+    position: absolute;
 }
 
 .config {
@@ -43,8 +43,8 @@ code {
     display: flex;
     flex-direction: column;
     width: auto;
-    right: 10px;
     left: 10px;
+    right: 10px;
 }
 
 .line {
@@ -57,7 +57,7 @@ code {
     height: 782px;
     border-style: solid;
     position: relative;
-    padding: 0 10px 10px;
     margin: 10px;
+    padding: 0 10px;
     overflow-y: scroll;
 }
